cabal-version:         >=1.10
name:                  lexy
version:               0.1.0.0
license:               MIT
license-file:          LICENSE
author:                Lúcás Meier
maintainer:            cronokirby@gmail.com
build-type:            Simple
extra-source-files:    README.md

library
  build-depends:
      base >=4.13 && <5
    , text >=1.2 && <1.3
  default-language: Haskell2010
  default-extensions:
      NoImplicitPrelude
    , OverloadedStrings
  other-modules: Ourlude
  exposed-modules: Lexy
  ghc-options: -Wall
  hs-source-dirs: src

benchmark lexy
  type: exitcode-stdio-1.0
  main-is: Bench.hs
  build-depends:
      base >=4.13 && <5
    , criterion >=1.4 && <1.6
    , lexy
    , text >=1.2 && <1.3
  default-language: Haskell2010
  default-extensions:
      OverloadedStrings

test-suite lexy-test
  build-depends:       
      base >=4.13 && <5
    , lexy
    , tasty >=1.3 && <1.4
    , tasty-hunit >=0.10 && <0.11
  default-language: Haskell2010
  default-extensions:  
      NoImplicitPrelude
    , OverloadedStrings
  hs-source-dirs: test
  ghc-options: -threaded -rtsopts 
  main-is: Suite.hs
  other-modules: LexerTest
  type: exitcode-stdio-1.0
